--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+  @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;1,300&display=swap');
+
 *{
     padding: 0;
     margin: 0;
@@ -7,4 +9,5 @@ footer{
     background-color: black;
     color: white;
     height: 11vh;
+    font-family: 'Lato', sans-serif;
 }
